--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,25 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, wrapper: "horizontal_form", :html => { :class => 'form-horizontal' }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <%= f.input :email, autofocus: true, input_wrapper_html: { class: "col-xs-4" } %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <%= f.input :password, autocomplete: "off", input_wrapper_html: { class: "col-xs-4" } %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <%= f.input :password_confirmation, autocomplete: "off", input_wrapper_html: { class: "col-xs-4" } %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <%= f.input :current_password, autocomplete: "off", input_wrapper_html: { class: "col-xs-4" } %>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+    <%= f.input :first_name, input_wrapper_html: { class: "col-xs-4" } %>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+    <%= f.input :last_name, input_wrapper_html: { class: "col-xs-4" } %>
+
+    <%= f.input :age, input_wrapper_html: { class: "col-xs-4" } %>
+
+    <%= f.input :sex, collection: [["male", 1],["female", 2],["ather", 3]], as: :radio_buttons, item_wrapper_class: "inline" %>
+
+    <%= f.button :submit, :class => 'btn-primary' %>
 <% end %>
 
 <h3>Cancel my account</h3>
