--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% unless user_signed_in? %>
+  <%= link_to new_user_registration_path do %>
+    <i class="fa fa-power-off"></i> Sign up
+  <% end %>
+<% end %>
